--- a/index.html
+++ b/index.html
@@ -9,39 +9,42 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Exo+2:wght@400;600;800&display=swap" rel="stylesheet">  <style>
     :root{
-      --bg-1:#070a12; --bg-2:#0b1220; --bg-3:#0a0f1a; --line:#1a253e;
+      --bg-1:#080b13; --bg-2:#0b1220; --line:#1a253e;
       --ink:#e7eeff; --muted:#93a2c7;
-      --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
-      --maxw:1480px;
+      --accent:#11b1ff; --accent2:#6ee7ff;
+      --glow:rgba(17,177,255,.28); --maxw:1240px;
     }
 
     /* RESET */
-    *{box-sizing:border-box;margin:0;padding:0}
+    *,*::before,*::after{box-sizing:border-box}
     html,body{height:100%}
+    body{margin:0}
 
     /* PAGE */
     body{
-      min-height:100vh;display:flex;flex-direction:column;color:var(--ink);
+      min-height:100svh;display:flex;flex-direction:column;color:var(--ink);
       background:
         radial-gradient(1200px 800px at 15% -10%, #0c1426 0%, transparent 60%),
         radial-gradient(1200px 900px at 85% 110%, #071120 0%, transparent 60%),
-        linear-gradient(120deg, var(--bg-1), var(--bg-2) 40%, var(--bg-3));
-      background-repeat:no-repeat; background-attachment:fixed; /* smoother feel */
+        linear-gradient(120deg, var(--bg-1), var(--bg-2));
+      background-repeat:no-repeat;
+      background-size:cover;
       font-family:'Exo 2',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
-      overflow-x:hidden; /* allow normal vertical scroll */
+      overflow-x:hidden;
+      scroll-behavior:smooth;
     }
 
     /* WRAP */
-    .wrap{max-width:var(--maxw);margin:0 auto;padding:72px 32px 32px;width:100%;opacity:0;transform:translateY(16px);filter:blur(8px);transition:opacity .7s ease,transform .7s ease,filter .7s ease}
+    .wrap{max-width:var(--maxw);margin:0 auto;padding:72px 20px 28px;width:100%;opacity:0;transform:translateY(12px);filter:blur(6px);transition:opacity .6s ease,transform .6s ease,filter .6s ease}
     .app-ready .wrap{opacity:1;transform:none;filter:blur(0)}
 
     /* HEADER */
-    header{display:flex;align-items:center;gap:18px;padding:18px 0 30px;border-bottom:1px solid var(--line)}
-    .logo img{width:104px;height:auto;border-radius:22px;box-shadow:0 10px 24px rgba(17,177,255,.22)}
-    .brand{display:flex;align-items:center;gap:16px;margin-top:8px} /* push brand down a bit */
+    header{display:flex;align-items:center;gap:16px;padding:18px 0 26px;border-bottom:1px solid var(--line)}
+    .logo img{width:96px;height:auto;border-radius:20px;box-shadow:0 10px 24px rgba(17,177,255,.22)}
+    .brand{display:flex;align-items:center;gap:14px;margin-top:6px}
     .brand .title{display:flex;flex-direction:column;gap:4px}
-    .brand h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:28px;letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent}
-    .brand p{color:var(--muted);font-size:14px}
+    .brand h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:clamp(18px,2vw,28px);letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent}
+    .brand p{color:var(--muted);font-size:clamp(12px,1.6vw,14px)}
 
     /* ELECTRIC intro for brand */
     .brand.electric h1,.brand.electric p{animation:crtFlicker .9s steps(18,end) 1 both}
@@ -50,47 +53,47 @@
     @keyframes crtFlicker{0%,8%{opacity:.2; text-shadow:0 0 10px rgba(17,177,255,.7)} 20%{opacity:1} 35%{opacity:.35} 55%{opacity:1} 100%{opacity:1; text-shadow:0 0 12px rgba(17,177,255,.2)}}
 
     /* MAIN GRID */
-    main{display:grid;grid-template-columns:1.1fr .9fr;align-items:center;gap:56px;min-height:72vh}
+    main{display:grid;grid-template-columns:1.05fr .95fr;align-items:center;gap:clamp(28px,5vw,64px);min-height:66svh}
     .content{display:flex;flex-direction:column;justify-content:center}
 
-    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:56px;line-height:1.06;margin:0 0 18px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent}
-    p.lead{color:#cfe0ff;line-height:1.68;margin:0 0 18px;font-size:1.12rem}
+    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:clamp(28px,6vw,64px);line-height:1.06;margin:0 0 16px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent}
+    p.lead{color:#cfe0ff;line-height:1.68;margin:0 0 16px;font-size:clamp(14px,1.8vw,18px)}
 
     /* Bullets */
-    ul{list-style:none;margin:0 0 24px 0}
-    li{position:relative;padding-left:28px;margin:10px 0;font-weight:600}
-    li::before{content:"";position:absolute;left:0;top:.55em;width:16px;height:10px;border-left:3px solid #00b7ff;border-top:3px solid #00b7ff;transform:skewX(-18deg) rotate(-45deg);filter:drop-shadow(0 0 6px rgba(17,177,255,.5))}
+    ul{list-style:none;margin:0 0 20px 0}
+    li{position:relative;padding-left:26px;margin:8px 0;font-weight:600}
+    li::before{content:"";position:absolute;left:0;top:.55em;width:14px;height:9px;border-left:3px solid #00b7ff;border-top:3px solid #00b7ff;transform:skewX(-18deg) rotate(-45deg);filter:drop-shadow(0 0 6px rgba(17,177,255,.5))}
 
-    .cta-row{display:flex;align-items:center;gap:16px;flex-wrap:wrap;margin-top:12px}
-    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 36px;border-radius:14px;font-weight:800;letter-spacing:.6px;box-shadow:0 12px 28px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed}
+    .cta-row{display:flex;align-items:center;gap:14px;flex-wrap:wrap;margin-top:10px}
+    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:13px 30px;border-radius:14px;font-weight:800;letter-spacing:.6px;box-shadow:0 12px 28px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed}
     .note{font-size:13px;color:var(--muted)}
 
     /* TERMS CARD */
-    .terms{position:relative;justify-self:end;max-width:520px;width:100%;opacity:0;transform:translateY(18px);filter:blur(10px)}
-    .app-ready .terms{animation:termsIn .85s cubic-bezier(.22,.61,.36,1) .45s forwards}
+    .terms{position:relative;justify-self:end;max-width:min(520px,90vw);width:100%;opacity:0;transform:translateY(16px);filter:blur(8px)}
+    .app-ready .terms{animation:termsIn .7s cubic-bezier(.22,.61,.36,1) .45s forwards}
     @keyframes termsIn{to{opacity:1;transform:none;filter:blur(0)}}
-    .terms::before{content:"";position:absolute;inset:-14px;border-radius:24px;pointer-events:none;opacity:0;background:radial-gradient(360px 210px at var(--mx,50%) var(--my,50%), rgba(17,177,255,.20), transparent 65%);transition:opacity .25s ease}
-    .terms.is-hot::before{opacity:.75}
-    .card{position:relative;background:linear-gradient(180deg,#0d1323,#0d1220);border:1px solid var(--line);border-radius:20px;padding:24px;box-shadow:0 22px 48px rgba(0,0,0,.32),0 0 0 1px rgba(255,255,255,.05) inset,0 0 28px rgba(17,177,255,.18)}
-    .card h3{color:#a8dfff;font-size:1.2rem;margin-bottom:10px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:8px}
-    .row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:10px 0}
+    .terms::before{content:"";position:absolute;inset:-12px;border-radius:22px;pointer-events:none;opacity:0;background:radial-gradient(340px 200px at var(--mx,50%) var(--my,50%), rgba(17,177,255,.20), transparent 65%);transition:opacity .25s ease}
+    .terms.is-hot::before{opacity:.7}
+    .card{position:relative;background:linear-gradient(180deg,#0d1323,#0d1220);border:1px solid var(--line);border-radius:18px;padding:20px;box-shadow:0 20px 44px rgba(0,0,0,.32),0 0 0 1px rgba(255,255,255,.05) inset,0 0 24px rgba(17,177,255,.16)}
+    .card h3{color:#a8dfff;font-size:1.12rem;margin-bottom:8px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:8px}
+    .row{display:grid;grid-template-columns:auto 1fr;gap:8px 12px;align-items:center;margin:10px 0}
     .label{color:var(--muted);font-size:14px}
     .value{font-weight:800}
 
     /* FOOTER */
-    footer{margin-top:auto;border-top:1px solid var(--line);padding:18px 32px;display:flex;justify-content:space-between;align-items:center;gap:16px;color:var(--muted);font-size:14px;background:rgba(0,10,20,.2);backdrop-filter:saturate(125%) blur(2px)}
-    .foot-group{display:flex;align-items:center;gap:12px;flex-wrap:wrap}
+    footer{margin-top:auto;border-top:1px solid var(--line);padding:16px 20px;display:flex;justify-content:space-between;align-items:center;gap:12px;color:var(--muted);font-size:14px;background:rgba(0,10,20,.2);backdrop-filter:saturate(125%) blur(2px)}
+    .foot-group{display:flex;align-items:center;gap:10px;flex-wrap:wrap}
     .chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:12px;border:1px solid rgba(17,177,255,.26);background:linear-gradient(180deg,rgba(17,177,255,.06),rgba(17,177,255,.02));text-decoration:none;color:#d6eaff;font-weight:700}
     .chip svg{width:16px;height:16px}
 
     /* SPLASH (exact 1s pulse, then fade) */
     .splash{position:fixed;inset:0;z-index:9999;display:grid;place-items:center;background:radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),linear-gradient(120deg, var(--bg-1), var(--bg-2));}
-    .splash__logo{width:220px;height:auto;border-radius:22px;box-shadow:0 0 44px rgba(17,177,255,.45),0 0 0 2px rgba(255,255,255,.08) inset;animation:pulse1s 1s ease-in-out 1 both}
+    .splash__logo{width:min(240px,40vw);height:auto;border-radius:22px;box-shadow:0 0 44px rgba(17,177,255,.45),0 0 0 2px rgba(255,255,255,.08) inset;animation:pulse1s 1s ease-in-out 1 both}
     @keyframes pulse1s{0%{opacity:0;transform:scale(.92)}50%{opacity:1;transform:scale(1.05)}100%{opacity:1;transform:scale(1)}}
     .splash.is-fading{animation:fade .55s ease forwards}
     @keyframes fade{to{opacity:0;visibility:hidden}}
 
-    /* CLICK COIN */
+    /* Click delight */
     .coin{position:fixed;left:0;top:0;pointer-events:none;z-index:9999;width:12px;height:12px;transform:translate(-50%,-50%);} 
     .coin::before,.coin::after{content:"";position:absolute;inset:0;border-radius:50%}
     .coin::before{background:radial-gradient(circle at 30% 30%, #e0fbff, #7adfff 35%, #00b7ff 60%, transparent 61%);box-shadow:0 0 14px rgba(17,177,255,.6)}
@@ -99,16 +102,23 @@
     .coin{animation:pop 650ms cubic-bezier(.22,.61,.36,1) forwards}
     @keyframes pop{0%{opacity:.0; transform:translate(-50%,-50%) scale(.3)}20%{opacity:1; transform:translate(-50%,-50%) scale(1)}70%{opacity:1; transform:translate(-50%, -110%) scale(.9)}100%{opacity:0; transform:translate(-50%,-160%) scale(.6)}}
 
-    /* RESPONSIVE */
-    @media (max-width:1080px){
-      main{grid-template-columns:1fr;gap:40px}
-      .terms{justify-self:start;max-width:560px}
+    /* MOBILE */
+    @media (max-width:900px){
+      main{grid-template-columns:1fr}
+      .terms{justify-self:start}
+      header{padding-bottom:20px}
+      .wrap{padding:64px 16px 24px}
+      footer{padding-inline:16px}
     }
-    @media (max-width:560px){
-      h2{font-size:36px}
-      .wrap{padding-top:64px}
-      .terms{max-width:100%}
+    @media (max-width:520px){
+      h2{font-size:clamp(24px,9vw,34px)}
       .apply-btn{width:100%;justify-content:center}
+      .card{padding:16px}
+    }
+
+    @media (prefers-reduced-motion: reduce){
+      .wrap{transition:none}
+      .splash__logo,.splash.is-fading,.terms,.brand.electric h1,.brand.electric p{animation:none}
     }
   </style></head>
 <body>
@@ -163,8 +173,12 @@
       </a>
     </div>
   </footer>  <script>
-    // Stable splash -> reveal -> typing, terms hover glow and click coin
+    // Stable splash -> reveal -> typing, hover glow and click coin
     (function(){
+      // Prevent restoring previous scroll on reload
+      if('scrollRestoration' in history){ history.scrollRestoration = 'manual'; }
+      window.scrollTo({top:0,left:0,behavior:'instant'});
+
       const splash = document.getElementById('splash');
       const brand  = document.getElementById('brand');
       const terms  = document.getElementById('terms');
@@ -178,12 +192,13 @@
       }
 
       function begin(){
-        if(!splash){ forceReveal(); return; }
-        // fade right after 1s pulse
+        // Fade right after 1s pulse
         setTimeout(()=>{
-          splash.classList.add('is-fading');
-          const t=setTimeout(forceReveal,700);
-          splash.addEventListener('animationend',()=>{clearTimeout(t); forceReveal();},{once:true});
+          if(splash){
+            splash.classList.add('is-fading');
+            const t=setTimeout(forceReveal,700);
+            splash.addEventListener('animationend',()=>{clearTimeout(t); forceReveal();},{once:true});
+          }else{ forceReveal(); }
         },1000);
       }
 
@@ -195,8 +210,8 @@
         const list = document.getElementById('typing-list'); if(!list) return;
         const items = Array.from(list.querySelectorAll('li'));
         items.forEach(li=>{ li.dataset.full=li.textContent.trim(); li.textContent=''; li.style.opacity=0; });
-        let i=0; function typeNext(){ if(i>=items.length) return; const el=items[i]; const txt=el.dataset.full; el.style.opacity=1; let k=0; (function step(){ if(k<=txt.length){ el.textContent=txt.slice(0,k++); setTimeout(step,14);} else { i++; setTimeout(typeNext,160);} })(); }
-        setTimeout(typeNext, 200);
+        let i=0; function typeNext(){ if(i>=items.length) return; const el=items[i]; const txt=el.dataset.full; el.style.opacity=1; let k=0; (function step(){ if(k<=txt.length){ el.textContent=txt.slice(0,k++); setTimeout(step,14);} else { i++; setTimeout(typeNext,140);} })(); }
+        setTimeout(typeNext, 150);
       }
 
       // Follow glow over terms card
