--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     :root{
       --bg-1:#080b13; --bg-2:#0b1220; --line:#1a253e;
       --ink:#e7eeff; --muted:#93a2c7;
-      --accent:#11b1ff; --accent2:#6ee7ff;
-      --glow:rgba(17,177,255,.28); --maxw:1240px;
+      --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
+      --maxw:1240px;
     }
 
     /* RESET */
@@ -22,56 +22,61 @@
 
     /* PAGE */
     body{
-      min-height:100svh;display:flex;flex-direction:column;color:var(--ink);
+      /* PC: fit-to-screen no scroll, Mobile: normal scroll */
+      overflow-x:hidden;
+      color:var(--ink);
+      font-family:'Exo 2',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
       background:
         radial-gradient(1200px 800px at 15% -10%, #0c1426 0%, transparent 60%),
         radial-gradient(1200px 900px at 85% 110%, #071120 0%, transparent 60%),
         linear-gradient(120deg, var(--bg-1), var(--bg-2));
-      background-repeat:no-repeat;
-      background-size:cover;
-      font-family:'Exo 2',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
-      overflow-x:hidden;
-      scroll-behavior:smooth;
+      background-repeat:no-repeat; background-size:cover;
     }
+    @media (min-width:1024px){ body{height:100vh; overflow-y:hidden; display:grid; grid-template-rows:auto 1fr auto;} }
+    @media (max-width:1023px){ body{min-height:100svh; overflow-y:auto; display:flex; flex-direction:column;} }
 
-    /* WRAP */
-    .wrap{max-width:var(--maxw);margin:0 auto;padding:72px 20px 28px;width:100%;opacity:0;transform:translateY(12px);filter:blur(6px);transition:opacity .6s ease,transform .6s ease,filter .6s ease}
+    /* WRAP (smooth appear) */
+    .wrap{max-width:var(--maxw);margin:0 auto;padding:64px 20px 24px;width:100%;opacity:0;transform:translateY(10px);filter:blur(6px);transition:opacity .6s ease,transform .6s ease,filter .6s ease}
     .app-ready .wrap{opacity:1;transform:none;filter:blur(0)}
 
     /* HEADER */
-    header{display:flex;align-items:center;gap:16px;padding:18px 0 26px;border-bottom:1px solid var(--line)}
-    .logo img{width:96px;height:auto;border-radius:20px;box-shadow:0 10px 24px rgba(17,177,255,.22)}
-    .brand{display:flex;align-items:center;gap:14px;margin-top:6px}
+    header{display:flex;align-items:center;gap:16px;padding:18px 0 22px;border-bottom:1px solid var(--line)}
+    .brand{display:flex;align-items:center;gap:14px;margin-top:6px;position:relative}
+    .logo img{width:92px;height:auto;border-radius:20px;box-shadow:0 10px 24px rgba(17,177,255,.22)}
     .brand .title{display:flex;flex-direction:column;gap:4px}
     .brand h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:clamp(18px,2vw,28px);letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent}
     .brand p{color:var(--muted);font-size:clamp(12px,1.6vw,14px)}
 
-    /* ELECTRIC intro for brand */
+    /* OLD-TV ELECTRIC INTRO (subtle but clear) */
+    .brand::after{content:"";position:absolute;left:-12px;right:-12px;top:-6px;height:2px;background:repeating-linear-gradient(90deg,rgba(17,177,255,.0)0 6px,rgba(17,177,255,.35)7px,rgba(17,177,255,.0)8px);opacity:0;pointer-events:none}
+    .brand.electric::after{animation:scan 900ms ease-out 1 forwards}
+    @keyframes scan{0%{opacity:.9;transform:translateY(-8px)}100%{opacity:0;transform:translateY(42px)}}
     .brand.electric h1,.brand.electric p{animation:crtFlicker .9s steps(18,end) 1 both}
     .brand.electric .logo img{animation:crtPulse .6s ease-out 1 both}
-    @keyframes crtPulse{0%{filter:brightness(.7)}40%{filter:brightness(1.35) drop-shadow(0 0 22px rgba(17,177,255,.45))}100%{filter:brightness(1) drop-shadow(0 0 10px rgba(17,177,255,.2))}}
-    @keyframes crtFlicker{0%,8%{opacity:.2; text-shadow:0 0 10px rgba(17,177,255,.7)} 20%{opacity:1} 35%{opacity:.35} 55%{opacity:1} 100%{opacity:1; text-shadow:0 0 12px rgba(17,177,255,.2)}}
+    @keyframes crtPulse{0%{filter:brightness(.6) blur(.4px)}40%{filter:brightness(1.35) blur(.2px) drop-shadow(0 0 22px rgba(17,177,255,.45))}100%{filter:brightness(1) blur(0) drop-shadow(0 0 10px rgba(17,177,255,.2))}}
+    @keyframes crtFlicker{0%,8%{opacity:.25; filter:blur(.6px)} 20%{opacity:1; filter:blur(0)} 35%{opacity:.4} 55%{opacity:1} 100%{opacity:1}}
 
-    /* MAIN GRID */
-    main{display:grid;grid-template-columns:1.05fr .95fr;align-items:center;gap:clamp(28px,5vw,64px);min-height:66svh}
+    /* MAIN GRID (fits PC viewport height without scroll) */
+    main{display:grid;grid-template-columns:1.05fr .95fr;align-items:center;gap:clamp(28px,5vw,60px)}
+    @media (min-width:1024px){ main{height:calc(100vh - 64px - 58px);} } /* header ~64, footer ~58 */
     .content{display:flex;flex-direction:column;justify-content:center}
 
-    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:clamp(28px,6vw,64px);line-height:1.06;margin:0 0 16px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent}
-    p.lead{color:#cfe0ff;line-height:1.68;margin:0 0 16px;font-size:clamp(14px,1.8vw,18px)}
+    h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:clamp(28px,6vw,60px);line-height:1.06;margin:0 0 14px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent}
+    p.lead{color:#cfe0ff;line-height:1.68;margin:0 0 14px;font-size:clamp(14px,1.8vw,18px)}
 
-    /* Bullets */
-    ul{list-style:none;margin:0 0 20px 0}
+    /* Bullets with typewriter later */
+    ul{list-style:none;margin:0 0 18px 0}
     li{position:relative;padding-left:26px;margin:8px 0;font-weight:600}
     li::before{content:"";position:absolute;left:0;top:.55em;width:14px;height:9px;border-left:3px solid #00b7ff;border-top:3px solid #00b7ff;transform:skewX(-18deg) rotate(-45deg);filter:drop-shadow(0 0 6px rgba(17,177,255,.5))}
 
-    .cta-row{display:flex;align-items:center;gap:14px;flex-wrap:wrap;margin-top:10px}
-    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:13px 30px;border-radius:14px;font-weight:800;letter-spacing:.6px;box-shadow:0 12px 28px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed}
+    .cta-row{display:flex;align-items:center;gap:12px;flex-wrap:wrap;margin-top:8px}
+    .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:12px 28px;border-radius:14px;font-weight:800;letter-spacing:.6px;box-shadow:0 12px 28px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed}
     .note{font-size:13px;color:var(--muted)}
 
-    /* TERMS CARD */
-    .terms{position:relative;justify-self:end;max-width:min(520px,90vw);width:100%;opacity:0;transform:translateY(16px);filter:blur(8px)}
-    .app-ready .terms{animation:termsIn .7s cubic-bezier(.22,.61,.36,1) .45s forwards}
-    @keyframes termsIn{to{opacity:1;transform:none;filter:blur(0)}}
+    /* TERMS CARD (appears LAST with futuristic flip+glow) */
+    .terms{position:relative;justify-self:end;max-width:min(520px,92vw);width:100%;opacity:0;transform:translateY(16px) rotateX(8deg);transform-style:preserve-3d;filter:blur(8px)}
+    .app-ready .terms{animation:termsIn .85s cubic-bezier(.22,.61,.36,1) 1.1s forwards}
+    @keyframes termsIn{0%{opacity:0;transform:translateY(16px) rotateX(8deg);filter:blur(8px)}60%{opacity:1;transform:translateY(-2px) rotateX(0);filter:blur(2px)}100%{opacity:1;transform:none;filter:blur(0)}}
     .terms::before{content:"";position:absolute;inset:-12px;border-radius:22px;pointer-events:none;opacity:0;background:radial-gradient(340px 200px at var(--mx,50%) var(--my,50%), rgba(17,177,255,.20), transparent 65%);transition:opacity .25s ease}
     .terms.is-hot::before{opacity:.7}
     .card{position:relative;background:linear-gradient(180deg,#0d1323,#0d1220);border:1px solid var(--line);border-radius:18px;padding:20px;box-shadow:0 20px 44px rgba(0,0,0,.32),0 0 0 1px rgba(255,255,255,.05) inset,0 0 24px rgba(17,177,255,.16)}
@@ -81,7 +86,7 @@
     .value{font-weight:800}
 
     /* FOOTER */
-    footer{margin-top:auto;border-top:1px solid var(--line);padding:16px 20px;display:flex;justify-content:space-between;align-items:center;gap:12px;color:var(--muted);font-size:14px;background:rgba(0,10,20,.2);backdrop-filter:saturate(125%) blur(2px)}
+    footer{border-top:1px solid var(--line);padding:14px 20px;display:flex;justify-content:space-between;align-items:center;gap:12px;color:var(--muted);font-size:14px;background:rgba(0,10,20,.2);backdrop-filter:saturate(125%) blur(2px)}
     .foot-group{display:flex;align-items:center;gap:10px;flex-wrap:wrap}
     .chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:12px;border:1px solid rgba(17,177,255,.26);background:linear-gradient(180deg,rgba(17,177,255,.06),rgba(17,177,255,.02));text-decoration:none;color:#d6eaff;font-weight:700}
     .chip svg{width:16px;height:16px}
@@ -102,12 +107,11 @@
     .coin{animation:pop 650ms cubic-bezier(.22,.61,.36,1) forwards}
     @keyframes pop{0%{opacity:.0; transform:translate(-50%,-50%) scale(.3)}20%{opacity:1; transform:translate(-50%,-50%) scale(1)}70%{opacity:1; transform:translate(-50%, -110%) scale(.9)}100%{opacity:0; transform:translate(-50%,-160%) scale(.6)}}
 
-    /* MOBILE */
+    /* MOBILE TWEAKS */
     @media (max-width:900px){
       main{grid-template-columns:1fr}
       .terms{justify-self:start}
-      header{padding-bottom:20px}
-      .wrap{padding:64px 16px 24px}
+      .wrap{padding:60px 16px 20px}
       footer{padding-inline:16px}
     }
     @media (max-width:520px){
@@ -118,7 +122,7 @@
 
     @media (prefers-reduced-motion: reduce){
       .wrap{transition:none}
-      .splash__logo,.splash.is-fading,.terms,.brand.electric h1,.brand.electric p{animation:none}
+      .splash__logo,.splash.is-fading,.terms,.brand.electric h1,.brand.electric p,.brand.electric::after{animation:none}
     }
   </style></head>
 <body>
@@ -173,11 +177,13 @@
       </a>
     </div>
   </footer>  <script>
-    // Stable splash -> reveal -> typing, hover glow and click coin
+    // Stable splash -> reveal -> typing, terms hover glow, click coin
     (function(){
-      // Prevent restoring previous scroll on reload
-      if('scrollRestoration' in history){ history.scrollRestoration = 'manual'; }
-      window.scrollTo({top:0,left:0,behavior:'instant'});
+      // Only enforce top reset on desktop so mobile pull-to-refresh isn't blocked
+      if(window.matchMedia('(min-width:1024px)').matches){
+        if('scrollRestoration' in history){ history.scrollRestoration = 'manual'; }
+        window.scrollTo(0,0);
+      }
 
       const splash = document.getElementById('splash');
       const brand  = document.getElementById('brand');
@@ -187,40 +193,35 @@
         if(document.body.classList.contains('app-ready')) return;
         if(splash) splash.style.display='none';
         document.body.classList.add('app-ready');
-        if(brand){ brand.classList.add('electric'); setTimeout(()=>brand.classList.remove('electric'), 1000); }
+        if(brand){ brand.classList.add('electric'); setTimeout(()=>brand.classList.remove('electric'), 900); }
         startTyping();
       }
 
       function begin(){
-        // Fade right after 1s pulse
         setTimeout(()=>{
           if(splash){
             splash.classList.add('is-fading');
-            const t=setTimeout(forceReveal,700);
+            const t=setTimeout(forceReveal,650);
             splash.addEventListener('animationend',()=>{clearTimeout(t); forceReveal();},{once:true});
           }else{ forceReveal(); }
-        },1000);
+        },1000); // 1s pulse then fade
       }
 
       document.addEventListener('DOMContentLoaded', begin);
-      setTimeout(forceReveal, 3500); // hard fail-safe
+      setTimeout(forceReveal, 3200); // ultimate fail-safe
 
       // Typewriter bullets
       function startTyping(){
         const list = document.getElementById('typing-list'); if(!list) return;
         const items = Array.from(list.querySelectorAll('li'));
         items.forEach(li=>{ li.dataset.full=li.textContent.trim(); li.textContent=''; li.style.opacity=0; });
-        let i=0; function typeNext(){ if(i>=items.length) return; const el=items[i]; const txt=el.dataset.full; el.style.opacity=1; let k=0; (function step(){ if(k<=txt.length){ el.textContent=txt.slice(0,k++); setTimeout(step,14);} else { i++; setTimeout(typeNext,140);} })(); }
-        setTimeout(typeNext, 150);
+        let i=0; function typeNext(){ if(i>=items.length) return; const el=items[i]; const txt=el.dataset.full; el.style.opacity=1; let k=0; (function step(){ if(k<=txt.length){ el.textContent=txt.slice(0,k++); setTimeout(step,14);} else { i++; setTimeout(typeNext,120);} })(); }
+        setTimeout(typeNext, 120);
       }
 
       // Follow glow over terms card
       if(terms){
-        const move=(e)=>{
-          const r=terms.getBoundingClientRect();
-          const x=((e.clientX-r.left)/r.width)*100; const y=((e.clientY-r.top)/r.height)*100;
-          terms.style.setProperty('--mx',x+'%'); terms.style.setProperty('--my',y+'%');
-        };
+        const move=(e)=>{ const r=terms.getBoundingClientRect(); const x=((e.clientX-r.left)/r.width)*100; const y=((e.clientY-r.top)/r.height)*100; terms.style.setProperty('--mx',x+'%'); terms.style.setProperty('--my',y+'%'); };
         terms.addEventListener('mouseenter',()=>terms.classList.add('is-hot'));
         terms.addEventListener('mouseleave',()=>terms.classList.remove('is-hot'));
         window.addEventListener('mousemove',(e)=>{ if(terms.classList.contains('is-hot')) move(e); },{passive:true});
